# CodLic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CodLic.asd  CodLic.lisp  Makefile  README.md  README.txt  codlic.asd  codlic.lisp  comments.lisp  conditions.lisp  files.lisp  filetypes.lisp  license.lisp  package.lisp  parameters.lisp  search.lisp  setup.lisp  util.lisp
codlic/: Makefile  README.txt  codlic.asd  codlic.lisp  comments.lisp  conditions.lisp  files.lisp  filetypes.lisp  license.lisp  parameters.lisp  qlfile  setup.lisp
codlic/quicklisp/dists/cl-ppcre/: preference.txt
codlic/quicklisp/local-projects/: codlic  system-index.txt
codlic/roswell/: codlic.ros  codlic.ros~
licenses/: mit
man/: codlic.1
quicklisp/dists/cl-ppcre/: distinfo.txt  preference.txt  releases.cdb  releases.txt  systems.cdb  systems.txt
quicklisp/dists/cl-ppcre/installed/releases/: cl-ppcre.txt
quicklisp/dists/cl-ppcre/installed/systems/: cl-ppcre-unicode.txt  cl-ppcre.txt
quicklisp/dists/getopt/: distinfo.txt  preference.txt  releases.cdb  releases.txt  systems.cdb  systems.txt
quicklisp/dists/getopt/archives/: getopt-20150923-git.tgz
quicklisp/dists/getopt/installed/systems/: getopt.txt
quicklisp/dists/getopt/software/getopt-20150923-git/: README
quicklisp/dists/quicklisp/: preference.txt
src/: CMakeLists.txt  codlic.lisp  comment_type.cc  comment_type.h  config.h.in  files.lisp  filetypes.cc  filetypes.h  filetypes.lisp  license.cc  license.h  licensor.cc  licensor.h  logging.cc  logging.h  main.cc  main.lisp  options.cc  options.h  search.lisp
(+6 files in other folders)
